--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>LINDA!</title>
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="shortcut icon" href="../imgs/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="inicio">
+    <!--<link rel="stylesheet" href="inicio">
     <link rel="stylesheet" href="productos">
     <link rel="stylesheet" href="carrito">
-    <link rel="stylesheet" href="iniciarsesion">
+    <link rel="stylesheet" href="iniciarsesion">-->
 </head>
 <body>
 <header class="header">
