--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LINDA!</title>
-    <link rel="stylesheet" href="../css/styles.css">
-    <link rel="shortcut icon" href="../imgs/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="shortcut icon" href="./imgs/favicon.png" type="image/x-icon">
     <!--<link rel="stylesheet" href="inicio">
     <link rel="stylesheet" href="productos">
     <link rel="stylesheet" href="carrito">
@@ -15,7 +15,7 @@
 <header class="header">
     <div class="marca">
         <a href="#">
-            <h2><img src="../imgs/favicon.png" alt="" width="20px"> LINDA </h2>
+            <h2><img src="./imgs/favicon.png" alt="" width="20px"> LINDA </h2>
         </a>
     </div>
     
@@ -26,7 +26,7 @@
     <ul id="menu2" class="menu">  
         <li><a href="#">Inicio</a></li>
         <li><a href="productos">Productos</a></li>
-        <li><a href="carrito"><img src="../imgs/bolsa-de-la-compra.png" class="imgchiquita" alt="bolsadecompra"></a></li>
+        <li><a href="carrito"><img src="./imgs/bolsa-de-la-compra.png" class="imgchiquita" alt="bolsadecompra"></a></li>
         <li><a href="iniciarsesion">Iniciar Sesión</a></li>
     </ul>
 </header>
@@ -71,6 +71,6 @@
         <p><a href="#">Términos y Condiciones</a> | <a href="#">Política de Privacidad</a></p>
     </div>
 </footer>
-<script src="/js/script.js"></script>
+<!--<script src="/js/script.js"></script>-->
 </body>
 </html>
