--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <li><a href="productos">Productos</a></li>
         <li><a href="carrito"><img src="./imgs/bolsa-de-la-compra.png" class="imgchiquita" alt="bolsadecompra"></a></li>
         <li><a href="iniciarsesion">Iniciar Sesión</a></li>
+        <li><a href="./pages/register.html">Registrarse</a></li>
     </ul>
 </header>
 
