--- a/index.html
+++ b/index.html
@@ -6,10 +6,6 @@
     <title>LINDA!</title>
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="shortcut icon" href="./imgs/favicon.png" type="image/x-icon">
-    <!--<link rel="stylesheet" href="inicio">
-    <link rel="stylesheet" href="productos">
-    <link rel="stylesheet" href="carrito">
-    <link rel="stylesheet" href="iniciarsesion">-->
 </head>
 <body>
 <header class="header">
@@ -36,8 +32,8 @@
     <section class="main">
         <h1>Tus zapatos,<br> SIEMPRE!</h1>
         <div class="button-container">
-            <button class="temporada"><a href="./pages/carrusel.html">Temporada pasada</a></button>
-            <button class="temporada">Temporada actual</button>
+            <button class="temporada"><a href="./pages/pastCollection.html">Temporada pasada</a></button>
+            <button class="temporada"><a href="./pages/pastCollection.html">Temporada actual</a></button>
         </div>
     </section>
 </main>
@@ -72,6 +68,6 @@
         <p><a href="#">Términos y Condiciones</a> | <a href="#">Política de Privacidad</a></p>
     </div>
 </footer>
-<!--<script src="/js/script.js"></script>-->
+
 </body>
 </html>
