--- a/index.html
+++ b/index.html
@@ -6,10 +6,6 @@
     <title>LINDA!</title>
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="shortcut icon" href="./imgs/favicon.png" type="image/x-icon">
-    <!--<link rel="stylesheet" href="inicio">
-    <link rel="stylesheet" href="productos">
-    <link rel="stylesheet" href="carrito">
-    <link rel="stylesheet" href="iniciarsesion">-->
 </head>
 <body>
 <header class="header">
@@ -27,7 +23,7 @@
         <li><a href="#">Inicio</a></li>
         <li><a href="productos">Productos</a></li>
         <li><a href="carrito"><img src="./imgs/bolsa-de-la-compra.png" class="imgchiquita" alt="bolsadecompra"></a></li>
-        <li><a href="./pages/log_in.html">Iniciar Sesión</a></li>
+        <li><a href="iniciarsesion">Iniciar Sesión</a></li>
         <li><a href="./pages/register.html">Registrarse</a></li>
     </ul>
 </header>
@@ -36,7 +32,7 @@
     <section class="main">
         <h1>Tus zapatos,<br> SIEMPRE!</h1>
         <div class="button-container">
-            <button class="temporada"><a href="./pages/carrusel.html">Temporada pasada</a></button>
+            <button class="temporada"><a href="./pages/pastCollection.html">Temporada pasada</a></button>
             <button class="temporada">Temporada actual</button>
         </div>
     </section>
@@ -72,6 +68,6 @@
         <p><a href="#">Términos y Condiciones</a> | <a href="#">Política de Privacidad</a></p>
     </div>
 </footer>
-<!--<script src="/js/script.js"></script>-->
+
 </body>
 </html>
