--- a/pages/pastCollection.html
+++ b/pages/pastCollection.html
@@ -3,13 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>LINDA!</title>
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="shortcut icon" href="../imgs/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/colectionStyles.css">
     <!--BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
+  <header class="header">
+    <div class="marca">
+        <a href="#">
+            <h2><img src="../imgs/favicon.png" alt="" width="20px"> LINDA </h2>
+        </a>
+    </div>
+    <form action="" class="buscador">
+        <input class="busca" type="text" placeholder="Buscar...">
+        <input class="botonbusca" type="submit" value="OK">
+    </form>
+    <ul id="menu2" class="menu">  
+        <li><a href="/index.html">Inicio</a></li>
+        <li><a href="productos">Productos</a></li>
+        <li><a href="carrito"><img src="../imgs/bolsa-de-la-compra.png" class="imgchiquita" alt="bolsadecompra"></a></li>
+        <li><a href="iniciarsesion">Iniciar Sesión</a></li>
+        <li><a href="./pages/register.html">Registrarse</a></li>
+    </ul>
+  </header>
   <h1>TEMPORADA PASADA</h1>
   <!--SECCIÓN FOR SALE-->
   <h1>For Sale</h1>
@@ -149,6 +169,36 @@
     </div>
   </div>
   </section>
+  <footer>
+    <div class="footer-content">
+        <div class="contacto">
+            <h3>Contacto</h3>
+            <p>info@linda.com</p>
+            <p>11 4000 2000</p>
+            <p>Avenida Siempreviva 742</p>
+        </div>
+        <div class="enlaces">
+            <h3>Enlaces</h3>
+            <ul class="menu">
+                <li><a href="#">Inicio</a></li>
+                <li><a href="productos">Productos</a></li>
+                <li><a href="#">Contacto</a></li>
+            </ul>
+        </div>
+        <div class="redes-sociales">
+            <h3>Redes Sociales</h3>
+            <ul class="menu">
+                <li><a href="#">Facebook</a></li>
+                <li><a href="#">Twitter</a></li>
+                <li><a href="#">Instagram</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="legal">
+        <p>&copy; 2024 LINDA Calzados</p>
+        <p><a href="#">Términos y Condiciones</a> | <a href="#">Política de Privacidad</a></p>
+    </div>
+  </footer>
 <!--JS DE BOOTSTRAP-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
