--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <li><a href="#">Inicio</a></li>
         <li><a href="productos">Productos</a></li>
         <li><a href="carrito"><img src="./imgs/bolsa-de-la-compra.png" class="imgchiquita" alt="bolsadecompra"></a></li>
-        <li><a href="iniciarsesion">Iniciar Sesión</a></li>
+        <li><a href="./pages/log_in.html">Iniciar Sesión</a></li>
         <li><a href="./pages/register.html">Registrarse</a></li>
     </ul>
 </header>
