--- a/pages/pastCollection.html
+++ b/pages/pastCollection.html
@@ -24,10 +24,10 @@
     </form>
     <ul id="menu2" class="menu">  
         <li><a href="/index.html">Inicio</a></li>
-        <li><a href="productos">Productos</a></li>
-        <li><a href="carrito"><img src="../imgs/bolsa-de-la-compra.png" class="imgchiquita" alt="bolsadecompra"></a></li>
-        <li><a href="iniciarsesion">Iniciar Sesión</a></li>
-        <li><a href="./pages/register.html">Registrarse</a></li>
+        <li><a href="#">Productos</a></li>
+        <li><a href="#"><img src="../imgs/bolsa-de-la-compra.png" class="imgchiquita" alt="bolsadecompra"></a></li>
+        <li><a href="../pages/log_in.html">Iniciar Sesión</a></li>
+        <li><a href="../pages/register.html">Registrarse</a></li>
     </ul>
   </header>
   <h1>TEMPORADA PASADA</h1>
