--- a/pages/pastCollection.html
+++ b/pages/pastCollection.html
@@ -30,11 +30,16 @@
         <li><a href="../pages/register.html">Registrarse</a></li>
     </ul>
   </header>
-  <h1>TEMPORADA PASADA</h1>
+  <h1 class="titulo">TEMPORADA PASADA</h1>
   <!--SECCIÓN FOR SALE-->
-  <h1>For Sale</h1>
+  
   <section id="forSale" class="container">
-    <div id="carouselExampleCaptions" class="carousel slide">
+    <div class="row">
+      <div class="col-3">
+        <img src="../imgs/forSale.jpg">
+      </div>
+      <div class="col">
+        <div id="carouselExampleCaptions" class="carousel carousel-dark slide">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -42,25 +47,25 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="../imgs/25129-1.jpg" alt="..." class="img-fluid mx-auto d-block w-30">
+          <img src="../imgs/10306299467_361916027.jpg_800x800.jpg" alt="..." class="img-fluid mx-auto d-block w-30">
           <div class="carousel-caption d-none d-md-block">   
           </div>
           <h5>Vivi</h5>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis explicabo consequatur veritatis quis provident quasi fuga accusantium, cumque facilis, totam rerum earum alias debitis ad? Est odio quae distinctio? Totam.</p>
+            <p>Precio: 99.999$  | Tallas: 35-36-37</p>
         </div>
         <div class="carousel-item">
-          <img src="../imgs/201130200MO_27_1.jpg" class="img-fluid mx-auto d-block w-30" alt="...">
+          <img src="../imgs/280189-800-auto.png" class="img-fluid mx-auto d-block w-30" alt="...">
           <div class="carousel-caption d-none d-md-block">  
           </div>
           <h5>Raquel</h5>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum beatae voluptates placeat totam ut ipsam modi dolor inventore ipsa dolores vero, excepturi dolore esse tenetur quis non quidem eum sit.</p>
+            <p>Precio: 99.999$  | Tallas: 35-36-37</p>
           </div>
           <div class="carousel-item">
-            <img src="../imgs/25129-3.jpg" class="img-fluid mx-auto d-block w-30" alt="...">
+            <img src="../imgs/xti-142811-bronce-.jpg" class="img-fluid mx-auto d-block w-30" alt="...">
             <div class="carousel-caption d-none d-md-block">
             </div>
             <h5>Kyara</h5>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur vero harum doloribus suscipit quos laboriosam error est, adipisci a nostrum quisquam? Inventore recusandae quam aut, sit itaque saepe in veniam!</p>
+              <p>Precio: 99.999$  | Tallas: 35-36-37</p>
           </div>
       </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
@@ -71,20 +76,24 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
+        </div>
+      </div>
     </div>
   </section>
+  <hr>
   <!--SECCIÓN COLECCIÓN-->
   <section id="coleccion">
-    <h1>Colección Primavera-Verano</h1>
+    <h1 class="titulo">Colección Primavera-Verano</h1>
   <div class="row row-cols-1 row-cols-md-3 g-4">
     <div class="col">
       <div class="card h-100">
-        <img src="../imgs/201010170MO_99_1.jpg" class="card-img-top" alt="...">
+        <img src="../imgs/sandalias-comodas-bio.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Nombre del Calzado</h5>
+          <h5 class="card-title">Luana</h5>
           <ul class="detalle">
             <li>Precio: 99.999$  |</li>
-            <li>Color: <i class="bi bi-circle-fill"></i></li>
+            <li>Tallas: 35-36-37  |</li>
+            <li>Color: <i class="bi bi-circle-fill colorIconB"></i></li>
             <li><i class="bi bi-circle-fill"></i></li> |
             <li><i class="bi bi-suit-heart"></i></li>
             <li><i class="bi bi-bag"></i></li>
@@ -94,13 +103,13 @@
     </div>
     <div class="col">
       <div class="card h-100">
-        <img src="../imgs/201130200MO_27_1.jpg" class="card-img-top" alt="...">
+        <img src="../imgs/331396-800-800.png" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Nombre del Calzado</h5>
+          <h5 class="card-title">Mia</h5>
           <ul class="detalle">
             <li>Precio: 99.999$  |</li>
-            <li>Color: <i class="bi bi-circle-fill"></i></li>
-            <li><i class="bi bi-circle-fill"></i></li> |
+            <li>Tallas: 35-36-37  |</li>
+            <li>Color: <i class="bi bi-circle-fill colorIconW"></i> <i class="bi bi-circle-fill"></i> <i class="bi bi-circle-fill colorIconB"></i></li> |
             <li><i class="bi bi-suit-heart"></i></li>
             <li><i class="bi bi-bag"></i></li>
           </ul>
@@ -109,13 +118,13 @@
     </div>
     <div class="col">
       <div class="card h-100">
-        <img src="../imgs/25129-1.jpg" class="card-img-top" alt="...">
+        <img src="../imgs/311828-800-800.png" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Nombre del Calzado</h5>
+          <h5 class="card-title">Anto</h5>
           <ul class="detalle">
             <li>Precio: 99.999$  |</li>
-            <li>Color: <i class="bi bi-circle-fill"></i></li>
-            <li><i class="bi bi-circle-fill"></i></li> |
+            <li>Tallas: 35-36-37  |</li>
+            <li>Color: <i class="bi bi-circle-fill"></i> <i class="bi bi-circle-fill colorIconR"></i></li> |
             <li><i class="bi bi-suit-heart"></i></li>
             <li><i class="bi bi-bag"></i></li>
           </ul>
@@ -124,13 +133,13 @@
     </div>
     <div class="col">
       <div class="card h-100">
-        <img src="../imgs/25129-1.jpg" class="card-img-top" alt="...">
+        <img src="../imgs/sandalias-para-nina-suela-ancha.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Nombre del Calzado</h5>
+          <h5 class="card-title">Juli</h5>
           <ul class="detalle">
             <li>Precio: 99.999$  |</li>
-            <li>Color: <i class="bi bi-circle-fill"></i></li>
-            <li><i class="bi bi-circle-fill"></i></li> |
+            <li>Tallas: 35-36-37  |</li>
+            <li>Color: <i class="bi bi-circle"></i> <i class="bi bi-circle-fill colorIconW"></i> <i class="bi bi-circle-fill colorIconB"></i></li> |
             <li><i class="bi bi-suit-heart"></i></li>
             <li><i class="bi bi-bag"></i></li>
           </ul>
@@ -139,13 +148,13 @@
     </div>
     <div class="col">
       <div class="card h-100">
-        <img src="../imgs/25129-1.jpg" class="card-img-top" alt="...">
+        <img src="../imgs/sandalia-con-cuna-de-esparto.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Nombre del Calzado</h5>
+          <h5 class="card-title">Laura</h5>
           <ul class="detalle">
             <li>Precio: 99.999$  |</li>
-            <li>Color: <i class="bi bi-circle-fill"></i></li>
-            <li><i class="bi bi-circle-fill"></i></li> |
+            <li>Tallas: 35-36-37  |</li>
+            <li>Color: <i class="bi bi-circle-fill colorIconP"></i> <i class="bi bi-circle-fill colorIconW"></i> <i class="bi bi-circle-fill colorIconPe"></i></li> |
             <li><i class="bi bi-suit-heart"></i></li>
             <li><i class="bi bi-bag"></i></li>
           </ul>
@@ -154,13 +163,13 @@
     </div>
     <div class="col">
       <div class="card h-100">
-        <img src="../imgs/25129-1.jpg" class="card-img-top" alt="...">
+        <img src="../imgs/sandalia-nina-con-cuna.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Nombre del Calzado</h5>
+          <h5 class="card-title">Mica</h5>
           <ul class="detalle">
             <li>Precio: 99.999$  |</li>
-            <li>Color: <i class="bi bi-circle-fill"></i></li>
-            <li><i class="bi bi-circle-fill"></i></li> |
+            <li>Tallas: 35-36-37  |</li>
+            <li>Color: <i class="bi bi-circle-fill colorIconP"></i> <i class="bi bi-circle-fill colorIconB"></i> <i class="bi bi-circle-fill colorIconLsb"></i></li> |
             <li><i class="bi bi-suit-heart"></i></li>
             <li><i class="bi bi-bag"></i></li>
           </ul>
