form register y log in

--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <title>LINDA!</title>
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="shortcut icon" href="./imgs/favicon.png" type="image/x-icon">
+
 </head>
 <body>
 <header class="header">
     <div class="marca">
         <a href="#">
-            <h2><img src="./imgs/favicon.png" alt="" width="20px"> LINDA </h2>
+            <h2><img src="./imgs/favicon.png" alt="" width="30px"> LINDA </h2>
         </a>
     </div>
     
@@ -57,7 +58,7 @@
         <div class="redes-sociales">
             <h3>Redes Sociales</h3>
             <ul class="menu">
-                <li><a href="#">Facebook</a></li>
+                <li><a class="#">Facebook</a></li>
                 <li><a href="#">Twitter</a></li>
                 <li><a href="#">Instagram</a></li>
             </ul>
