--- a/pages/register.html
+++ b/pages/register.html
@@ -7,13 +7,15 @@
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="../css/register.styles.css">
     <link rel="shortcut icon" href="./imgs/favicon.png" type="image/x-icon">
+    <script src="https://kit.fontawesome.com/9489d8707e.js" crossorigin="anonymous"></script>
+
 
 </head>
     <body>
         <header class="header">
             <div class="marca">
             <a href="#">
-            <h2><img src="./imgs/favicon.png" alt="" width="20px"> LINDA </h2>
+            <h2><img src="../imgs/favicon.png" alt="" width="30px"> LINDA </h2>
         </a>
     </div>
     
@@ -27,6 +29,7 @@
         <li><a href="carrito"><img src="../imgs/bolsa-de-la-compra.png" class="imgchiquita" alt="bolsadecompra"></a></li>
         <li><a href="../pages/log_in.html">Iniciar Sesión</a></li>
         <li><a href="../pages/register.html"></a>Registro</li>
+        
     </ul>
 
 </header>
@@ -34,13 +37,13 @@
 <main>
     <div class="container">
     <form>
-        <h2 class="formh2">Registro</h2>
-        <input type="text" placeholder="Nombre">
-        <input type="text" placeholder="Apellido">
-        <input type="text" placeholder="E-Mail">
+        <i class="fa-solid fa-user-pen"></i>
+        <input type="text" placeholder="Nombre" required>
+        <input type="text" placeholder="Apellido" required>
+        <input type="text" placeholder="E-Mail" required>
         <input type="text" placeholder="Telefono">
-        <input type="password" placeholder="Contraseña">
-        <input type="password" placeholder="Confirmar Contraseña">
+        <input type="password" placeholder="Contraseña"required>
+        <input type="password" placeholder="Confirmar Contraseña"required>
 
         <input type="submit" class="button" value="Enviar">
 
