--- a/pages/log_in.html
+++ b/pages/log_in.html
@@ -44,7 +44,10 @@
         <input type="password" placeholder="Contraseña"required>
         <label><input type="checkbox" id="checkbox1" > Recordar usuario</label>
         <input type="submit" class="button" value="Acceder">
-        <a href="#" class="recorder">¿Olvido su contraseña?</a>
+        <a href="#">¿Olvido su contraseña?</a>
+        <div type="text">¿Sos nuevo en linda? 
+            <a href="../pages/register.html">Creá tu cuenta</a>  
+        </div>
     </form>
     
     </div>
