--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h1>Tus zapatos,<br> SIEMPRE!</h1>
         <div class="button-container">
             <button class="temporada"><a href="./pages/pastCollection.html">Temporada pasada</a></button>
-            <button class="temporada">Temporada actual</button>
+            <button class="temporada"><a href="./pages/newCollection.html">Temporada actual</a></button>
         </div>
     </section>
 </main>
