--- a/pages/log_in.html
+++ b/pages/log_in.html
@@ -38,10 +38,12 @@
 
 
     <div class="container">
-     <form>
+     <form id="form-validation" novalidate>
         <i class="fa-solid fa-user"></i>
         <input type="text" placeholder="E-Mail" required>
+        <small>El campo de E-Mail no puede estar vacío</small>
         <input type="password" placeholder="Contraseña"required>
+        <small>El campo de la contraseña no puede estar vacío</small>
         <label><input type="checkbox" id="checkbox1" > Recordar usuario</label>
         <input type="submit" class="button" value="Acceder">
         <a href="#">¿Olvido su contraseña?</a>
@@ -90,6 +92,18 @@
             <p><a href="#">Términos y Condiciones</a> | <a href="#">Política de Privacidad</a></p>
         </div>
     </footer>
+
+    <script>
+        const addForm = document.getElementById("form-validation");
+        addForm.addEventListener("submit", (e) => {
+            if (addForm.checkValidity() === false){
+                e.preventDefault();
+                e.stopPropagation();
+                addForm.classList.add("was-validated");
+                return false
+            }
+        })
+    </script>
     
 </body>
 </html>
