Validaciones log_in

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
         <p><a href="#">Términos y Condiciones</a> | <a href="#">Política de Privacidad</a></p>
     </div>
 </footer>
+<script src="log_in.js"></script>
 
 </body>
 </html>
