--- a/pages/register.html
+++ b/pages/register.html
@@ -28,7 +28,7 @@
         <li><a href="productos">Productos</a></li>
         <li><a href="carrito"><img src="../imgs/bolsa-de-la-compra.png" class="imgchiquita" alt="bolsadecompra"></a></li>
         <li><a href="../pages/log_in.html">Iniciar Sesión</a></li>
-        <li><a href="../pages/register.html"></a>Registro</li>
+        <li><a href="../pages/register.html">Registro</a></li>
         
     </ul>
 
