--- a/pages/log_in.html
+++ b/pages/log_in.html
@@ -25,7 +25,7 @@
         </form>
         <ul id="menu2" class="menu">
             <li><a href="../index.html">Inicio</a></li>
-            <li><a href="productos">Productos</a></li>
+            <li><a href="#">Productos</a></li>
             <li><a href="carrito"><img src="../imgs/bolsa-de-la-compra.png" class="imgchiquita" alt="bolsadecompra"></a>
             </li>
             <li><a href="../pages/log_in.html">Iniciar Sesión</a></li>
@@ -78,9 +78,10 @@
             <div class="enlaces">
                 <h3>Enlaces</h3>
                 <ul class="menu">
-                    <li><a href="#">Inicio</a></li>
-                    <li><a href="productos">Productos</a></li>
+                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="#">Productos</a></li>
                     <li><a href="#">Contacto</a></li>
+                    <li><a href="./pages/Comentarios.html">Comentarios</a></li>
                 </ul>
             </div>
             <div class="redes-sociales">
