--- a/pages/pastCollection.html
+++ b/pages/pastCollection.html
@@ -192,6 +192,7 @@
                 <li><a href="#">Inicio</a></li>
                 <li><a href="productos">Productos</a></li>
                 <li><a href="#">Contacto</a></li>
+                <li><a href="./pages/Comentarios.html">Comentarios</a></li>
             </ul>
         </div>
         <div class="redes-sociales">
