--- a/pages/register.html
+++ b/pages/register.html
@@ -67,9 +67,10 @@
             <div class="enlaces">
                 <h3>Enlaces</h3>
                 <ul class="menu">
-                    <li><a href="#">Inicio</a></li>
-                    <li><a href="productos">Productos</a></li>
+                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="#">Productos</a></li>
                     <li><a href="#">Contacto</a></li>
+                    <li><a href="./pages/Comentarios.html">Comentarios</a></li>
                 </ul>
             </div>
             <div class="redes-sociales">
